Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-16067

Wizards should be able to add Qt modules to a build

XMLWordPrintable

    • 019447c535a2eeff8fd6fe15c7304982c7604989

      It produces the dialog.h which includes

      #include <QDialog>

      this doesn't compile. When I change it to:

      #include <QtWidgets/QDialog>

      then it complains in other place:

      ../untitled5/dialog.cpp:2:23: fatal error: ui_dialog.h: No such file or directory

      (dialog.cpp has: #include "ui_dialog.h")

      Edit: This is because QtWidgets is not added as a module to the project.

        For Gerrit Dashboard: QTCREATORBUG-16067
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            jkobus Jarek Kobus
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes